# reversa

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py
backend/app/services/: boe_client.py  briefings.py  evidence.py  ingestion.py  ley30.py  lifecycle.py  parsers.py  relation_normalizer.py
backend/app/utils/: cache.py
backend/scripts/: compute_briefings.py  export_sample.py  ingest.py  render-start.sh
backend/tests/: conftest.py  test_api.py  test_boe_client.py  test_briefings.py  test_direction.py  test_evidence.py  test_ley30.py  test_lifecycle.py  test_relation_normalizer.py
backend/tests/fixtures/: sample_analyses.json  sample_norms.json
data/processed/: boe_graph.db-shm  boe_graph.db-wal
docs/: api.md  data-model.md  design-doc.md  relation-normalization.md  video-script.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vercel.json.example  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/briefings/: DeadLawSection.tsx  Ley30Section.tsx  OmnibusSection.tsx  UnreadableSection.tsx  keys.ts  ley30Blocks.tsx
frontend/src/components/: BriefingGraph.tsx  EvidenceDrawer.tsx  SortableTable.tsx  States.tsx  common.tsx  useFetch.ts
frontend/src/styles/: theme.css
openspec/: project.md
(+50 files in other folders)
